--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   dart_vader: ^0.0.5
   popover: ^0.2.9
 
+  #Config
+  envied: ^0.5.3
+
   # Network
   http: ^1.2.0
   cached_network_image: ^3.3.1
@@ -56,6 +59,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^5.1.0
+  envied_generator: ^0.5.3
+  build_runner: ^2.4.8
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -76,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lotties/
+    - .keys.env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
